TP2/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:06:44 **** Incremental Build of configuration Debug for project TP2 ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: TP2
Invoking: GCC C++ Linker
g++  -o "TP2"  ./ContratException.o ./Date.o ./Personne.o ./main.o ./validationFormat.o   
Finished building target: TP2
 
17:06:45 **** Incremental Build of configuration Debug for project TP2 ****
make all 
make: rien à faire pour « all ».
17:07:59 **** Incremental Build of configuration Debug for project TP2 ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: TP2
Invoking: GCC C++ Linker
g++  -o "TP2"  ./ContratException.o ./Date.o ./Personne.o ./main.o ./validationFormat.o   
Finished building target: TP2
 
17:08:01 **** Incremental Build of configuration Debug for project TP2 ****
make all 
make: rien à faire pour « all ».
17:08:40 **** Incremental Build of configuration Debug for project TP2 ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: TP2
Invoking: GCC C++ Linker
g++  -o "TP2"  ./ContratException.o ./Date.o ./Personne.o ./main.o ./validationFormat.o   
Finished building target: TP2
 
17:08:41 **** Incremental Build of configuration Debug for project TP2 ****
make all 
make: rien à faire pour « all ».
17:09:11 **** Incremental Build of configuration Debug for project TP2 ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: TP2
Invoking: GCC C++ Linker
g++  -o "TP2"  ./ContratException.o ./Date.o ./Personne.o ./main.o ./validationFormat.o   
Finished building target: TP2
 
17:09:38 **** Incremental Build of configuration Debug for project TP2 ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: TP2
Invoking: GCC C++ Linker
g++  -o "TP2"  ./ContratException.o ./Date.o ./Personne.o ./main.o ./validationFormat.o   
Finished building target: TP2
 
17:09:40 **** Incremental Build of configuration Debug for project TP2 ****
make all 
make: rien à faire pour « all ».
17:10:46 **** Incremental Build of configuration Debug for project TP2 ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: TP2
Invoking: GCC C++ Linker
g++  -o "TP2"  ./ContratException.o ./Date.o ./Personne.o ./main.o ./validationFormat.o   
Finished building target: TP2
 
17:10:54 **** Incremental Build of configuration Debug for project TP2 ****
make all 
make: rien à faire pour « all ».
17:14:32 **** Incremental Build of configuration Debug for project TP2 ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: TP2
Invoking: GCC C++ Linker
g++  -o "TP2"  ./ContratException.o ./Date.o ./Personne.o ./main.o ./validationFormat.o   
Finished building target: TP2
 
17:14:34 **** Incremental Build of configuration Debug for project TP2 ****
make all 
make: rien à faire pour « all ».
17:14:45 **** Incremental Build of configuration Debug for project TP2 ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: TP2
Invoking: GCC C++ Linker
g++  -o "TP2"  ./ContratException.o ./Date.o ./Personne.o ./main.o ./validationFormat.o   
Finished building target: TP2
 
17:14:47 **** Incremental Build of configuration Debug for project TP2 ****
make all 
make: rien à faire pour « all ».
17:15:47 **** Incremental Build of configuration Debug for project TP2 ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: TP2
Invoking: GCC C++ Linker
g++  -o "TP2"  ./ContratException.o ./Date.o ./Personne.o ./main.o ./validationFormat.o   
Finished building target: TP2
 
17:15:48 **** Incremental Build of configuration Debug for project TP2 ****
make all 
make: rien à faire pour « all ».
17:19:44 **** Incremental Build of configuration Debug for project TP2 ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: TP2
Invoking: GCC C++ Linker
g++  -o "TP2"  ./ContratException.o ./Date.o ./Personne.o ./main.o ./validationFormat.o   
Finished building target: TP2
 
17:20:46 **** Incremental Build of configuration Debug for project TP2 ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
../main.cpp: In function ‘int main()’:
../main.cpp:107:2: error: expected ‘;’ before ‘cin’
  cin.getline(buffer, 255);
  ^
make: *** [main.o] Erreur 1
subdir.mk:30 : la recette pour la cible « main.o » a échouée
17:20:51 **** Incremental Build of configuration Debug for project TP2 ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: TP2
Invoking: GCC C++ Linker
g++  -o "TP2"  ./ContratException.o ./Date.o ./Personne.o ./main.o ./validationFormat.o   
Finished building target: TP2
 
17:20:53 **** Incremental Build of configuration Debug for project TP2 ****
make all 
make: rien à faire pour « all ».
17:21:52 **** Incremental Build of configuration Debug for project TP2 ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: TP2
Invoking: GCC C++ Linker
g++  -o "TP2"  ./ContratException.o ./Date.o ./Personne.o ./main.o ./validationFormat.o   
Finished building target: TP2
 
17:23:37 **** Clean-only build of configuration Debug for project TP2 ****
make clean 
rm -rf  ./ContratException.o ./Date.o ./Personne.o ./main.o ./validationFormat.o  ./ContratException.d ./Date.d ./Personne.d ./main.d ./validationFormat.d  TP2
 
17:23:41 **** Build of configuration Debug for project TP2 ****
make all 
Building file: ../ContratException.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"ContratException.d" -MT"ContratException.o" -o "ContratException.o" "../ContratException.cpp"
Finished building: ../ContratException.cpp
 
Building file: ../Date.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Date.d" -MT"Date.o" -o "Date.o" "../Date.cpp"
Finished building: ../Date.cpp
 
Building file: ../Personne.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Personne.d" -MT"Personne.o" -o "Personne.o" "../Personne.cpp"
Finished building: ../Personne.cpp
 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building file: ../validationFormat.cpp
Invoking: GCC C++ Compiler
g++ -std=c++98 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"validationFormat.d" -MT"validationFormat.o" -o "validationFormat.o" "../validationFormat.cpp"
Finished building: ../validationFormat.cpp
 
Building target: TP2
Invoking: GCC C++ Linker
g++  -o "TP2"  ./ContratException.o ./Date.o ./Personne.o ./main.o ./validationFormat.o   
Finished building target: TP2
 
